--- a/charts/tempo/Chart.yaml
+++ b/charts/tempo/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 2.3.0
+appVersion: 2.6.1
 description: Grafana Tempo Single Binary Mode
 home: https://grafana.net
 icon: https://raw.githubusercontent.com/grafana/tempo/master/docs/tempo/website/logo_and_name.png
@@ -12,8 +12,10 @@ maintainers:
 - name: mdisibio
 - name: dgzlopes
 - name: mapno
+- email: sheikhabubaker761@gmail.com
+  name: Sheikh-Abubaker
 name: tempo
 sources:
 - https://github.com/grafana/tempo
 type: application
-version: 1.7.1
+version: 1.14.0
