--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -14,3 +14,9 @@ releases:
     chart: ./charts/kube-prometheus-stack
     values:
       - ./values/kube-prometheus-stack.yaml
+
+  - name: grafana
+    namespace: grafana
+    chart: ./charts/grafana
+    values:
+      - ./values/grafana.yaml
