sprinboot Service nodeport 변경, http.response.status_code을 prometheus Metric으로 전송
쿼리 : sum by(http_response_status_code) (increase(calls_total{service_name=demo, span_kind=SPAN_KIND_SERVER}[])) > 0

--- a/example/springboot/springboot-k8s.yaml
+++ b/example/springboot/springboot-k8s.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels:
       app: springboot
-  replicas: 2
+  replicas: 1
   template:
     metadata:
       labels:
@@ -49,8 +49,10 @@ metadata:
   labels:
     app: springboot
 spec:
+  type: NodePort
   ports:
-  - port: 8080
-    protocol: TCP
+  - targetPort: 8080
+    nodePort: 30008
+    port: 80
   selector:
     app: springboot
