helmfile.yaml otel-collector로 이름 변경(편의성)

--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -3,7 +3,7 @@ helmDefaults:
   createNamespace: true
 
 releases:
-  - name: opentelemetry-collector
+  - name: otel-collector
     namespace: monitoring
     chart: ./charts/opentelemetry-collector
     values:
