--- a/values/kube-prometheus-stack.yaml
+++ b/values/kube-prometheus-stack.yaml
@@ -64,3 +64,5 @@ prometheus:
   prometheusSpec:
     externalLabels: {}
     enableRemoteWriteReceiver: true
+    enableFeatures:
+    - native-histograms
