--- a/values/alloy.yaml
+++ b/values/alloy.yaml
@@ -10,9 +10,12 @@ alloy:
         format = "logfmt"
       }
 
+      // https://grafana.com/docs/alloy/latest/reference/components/otelcol/otelcol.receiver.otlp/#grpc-block
       otelcol.receiver.otlp "default" {
+        // default value is 0.0.0.0:4317
         grpc {}
 
+        // default value is 0.0.0.0:4318
         http {}
 
         output {
