--- a/example/springboot/demo/src/main/resources/application.yml
+++ b/example/springboot/demo/src/main/resources/application.yml
@@ -6,6 +6,10 @@ management:
   tracing:
     sampling:
       probability: 1.0
+  endpoints:
+    web:
+      exposure:
+        include: health, metrics
 
 logging:
   pattern:
