prometheus Service를 NodePort로 변경

--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -10,7 +10,7 @@ releases:
       - ./values/tempo.yaml
 
 
-  - name: otel-collector
+  - name: opentelemetry-collector
     namespace: monitoring
     chart: ./charts/opentelemetry-collector
     values:
