go client 추가 및 README 작성 및 프로메테우스 스크랩 추가

--- a/values/kube-prometheus-stack.yaml
+++ b/values/kube-prometheus-stack.yaml
@@ -71,3 +71,9 @@ prometheus:
     enableRemoteWriteReceiver: true
     enableFeatures:
     - native-histograms
+    additionalScrapeConfigs:
+    - job_name: go-client
+      scrape_interval: 10s
+      static_configs:
+      - targets: ["go.go.svc.cluster.local:8080"]
+
