--- a/values/tempo.yaml
+++ b/values/tempo.yaml
@@ -46,18 +46,10 @@ tempo:
   reportingEnabled: true
   metricsGenerator:
     # -- If true, enables Tempo's metrics generator (https://grafana.com/docs/tempo/next/metrics-generator/)
-    enabled: true
+    enabled: false
     remoteWriteUrl: "http://kube-prometheus-stack-prometheus.prometheus.svc.cluster.local:9090/api/v1/write"
     # generate_native_histograms: native
     # remoteWriteUrl: "http://kube-prometheus-stack-prometheus.prometheus.svc.cluster.local:9090/api/v1/write"
-    processor:
-      service_graphs:
-        histogram_buckets: [0.1, 0.2, 0.5, 1, 2, 5, 10]
-      span_metrics:
-        dimensions:
-          - http.method
-          - http.target
-          - http.response.status_code
 
   # -- Configuration options for the ingester
   ingester: {}
@@ -69,10 +61,18 @@ tempo:
   # Global overrides
   global_overrides:
     per_tenant_override_config: /conf/overrides.yaml
-  overrides:
-    defaults:
-      metrics_generator:
-        generate_native_histograms: both
+  overrides: {}
+    # defaults:
+    #   metrics_generator:
+    #     processors:
+    #       - span-metrics
+    #     generate_native_histograms: native
+    #     processor:
+    #       span_metrics:
+    #         dimensions:
+    #           - http.method
+    #           - http.target
+    #           - http.response.status_code
 
 
   # Tempo server configuration
