--- a/example/docker-compose-springboot-native-histogram/docker-compose.yaml
+++ b/example/docker-compose-springboot-native-histogram/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   # Tempo runs as user 10001, and docker compose creates the volume as root.
   # As such, we need to chown the volume in order for Tempo to start correctly.
   init:
-    image: &tempoImage grafana/tempo:latest
+    image: &tempoImage grafana/tempo:2.7.1
     user: root
     entrypoint:
       - "chown"
@@ -48,7 +48,7 @@ services:
       - ./otel-collector.yaml:/etc/otel-collector.yaml
 
   prometheus:
-    image: prom/prometheus:latest
+    image: prom/prometheus:v3.1.0
     command:
       - --config.file=/etc/prometheus.yaml
       - --web.enable-remote-write-receiver
