busybox에서 ubuntu로 이미지 변경

--- a/tempo-cli/Dockerfile
+++ b/tempo-cli/Dockerfile
@@ -1,5 +1,6 @@
-FROM busybox:latest
+FROM ubuntu:24.10
 WORKDIR /app
+RUN apt update -y && apt install -y wget 
 COPY download-tempo-cli.sh download-tempo-cli.sh
-RUN /bin/sh download-tempo-cli.sh 2.7.1
-CMD echo "busybox is sleeping..." && sleep infinity
+RUN /bin/bash download-tempo-cli.sh 2.7.1
+CMD echo "ubuntu is sleeping..." && sleep infinity
